kuber-homeworks_3.4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      # - path: /api
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: service-nginx
      #       port:
      #         number: 9002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-nginx
            port:
              number: 9001
